完善部分细节

--- a/src/components/user_record/index.scss
+++ b/src/components/user_record/index.scss
@@ -103,6 +103,9 @@
             &:hover {
               background-position: 0 -128px;
             }
+            &.is-playing {
+              background-position: -20px -128px;
+            }
           }
           .song-name {
             color: #333;
