--- a/src/components/album_songs/index.scss
+++ b/src/components/album_songs/index.scss
@@ -99,6 +99,9 @@
           &:hover {
             background-position: 0 -128px;
           }
+          &.is-playing {
+            background-position: -20px -128px;
+          }
         }
         .song-name {
           flex: 1;
