--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -11,6 +11,7 @@
       height: 24px;
       .link-item {
         a {
+          display: inline;
           color: #999;
           text-decoration: dashed;
         }
@@ -39,6 +40,7 @@
         margin-right: 4px;
       }
       a {
+        display: inline;
         color: #666;
         text-decoration: dashed;
         &:hover {
