--- a/src/page/artist_detail/index.scss
+++ b/src/page/artist_detail/index.scss
@@ -27,37 +27,6 @@
         height: 100%;
         background: url("../../assets/images/ban_mask.png") no-repeat;
       }
-      .btn-field {
-        display: flex;
-        align-items: center;
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
-        .home-btn {
-          width: 96px;
-          height: 32px;
-          margin-right: 20px;
-          background: url("../../assets/images/btn_enter.png") no-repeat;
-          cursor: pointer;
-          a {
-            display: block;
-            width: 100%;
-            height: 100%;
-          }
-          &:hover {
-            background: url("../../assets/images/btn_enter_hvr.png") no-repeat;
-          }
-        }
-        .save-btn {
-          width: 76px;
-          height: 32px;
-          background: url("../../assets/images/btn_fav.png") no-repeat;
-          cursor: pointer;
-          &:hover {
-            background: url("../../assets/images/btn_fav_hvr.png") no-repeat;
-          }
-        }
-      }
     }
     .link-list {
       display: flex;
@@ -104,6 +73,9 @@
           }
         }
       }
+    }
+    .artist-detail-content {
+      min-height: 200px;
     }
   }
   .right-field {
