修改顶部导航，添加我的页面

--- a/src/container/artist_top_song/index.scss
+++ b/src/container/artist_top_song/index.scss
@@ -8,6 +8,9 @@
       &:nth-of-type(odd) {
         background-color: #f7f7f7;
       }
+      &:nth-of-type(even) {
+        background-color: transparent;
+      }
       .song-index {
         text-align: center;
         width: 68px;
