--- a/src/components/music_player/index.scss
+++ b/src/components/music_player/index.scss
@@ -8,6 +8,7 @@
   background-repeat: repeat-x;
   background-position: 0 0;
   transition: all 300ms ease-in-out;
+  z-index: 7;
   .updown {
     display: flex;
     position: absolute;
