--- a/src/page/home/index.scss
+++ b/src/page/home/index.scss
@@ -8,8 +8,11 @@
       padding: 20px 20px 40px;
     }
     .right-content {
-      width: 230px;
-      padding: 20px;
+      width: 250px;
+      border-left: 1px solid #d3d3d3;
+      .right-pd-content {
+        padding: 20px;
+      }
     }
   }
 }
