--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -7,57 +7,71 @@
   .top-nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 1100px;
-    .logo {
-      width: 178px;
-      height: 70px;
-      background-image: url("../../assets/images/topbar.png");
-      background-position: 0px 0px;
-      background-repeat: no-repeat;
-      margin-right: 20px;
-      cursor: pointer;
-    }
-    .nav-list {
-      @include center();
+    .left-field {
+      display: flex;
+      align-items: center;
       height: 100%;
-      .nav-item {
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: 100%;
-        font-size: 20px;
-        color: #ccc;
-        padding: 0 20px;
+      .logo {
+        width: 178px;
+        height: 70px;
+        background-image: url("../../assets/images/topbar.png");
+        background-position: 0px 0px;
+        background-repeat: no-repeat;
+        margin-right: 20px;
         cursor: pointer;
-        font-size: 14px;
-        &.download-btn {
-          .hot {
+      }
+      .nav-list {
+        @include center();
+        height: 100%;
+        .nav-item {
+          position: relative;
+          display: flex;
+          align-items: center;
+          height: 100%;
+          font-size: 20px;
+          color: #ccc;
+          padding: 0 20px;
+          cursor: pointer;
+          font-size: 14px;
+          &.download-btn {
+            .hot {
+              position: absolute;
+              top: 20px;
+              right: -25px;
+              width: 40px;
+              height: 20px;
+              line-height: 20px;
+              background-color: $mainColor;
+              color: #fff;
+              font-size: 12px;
+              text-align: center;
+              border-radius: 12px;
+              transform: scale(0.8);
+            }
+          }
+          .triangle {
+            @include triangle(5px, $mainColor, top);
             position: absolute;
-            top: 20px;
-            right: -25px;
-            width: 40px;
-            height: 20px;
-            line-height: 20px;
-            background-color: $mainColor;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+          }
+          &:hover,
+          &.active {
             color: #fff;
-            font-size: 12px;
-            text-align: center;
-            border-radius: 12px;
-            transform: scale(0.8);
+            background-color: #000;
           }
         }
-        .triangle {
-          @include triangle(5px, $mainColor, top);
-          position: absolute;
-          bottom: 0;
-          left: 50%;
-          transform: translateX(-50%);
-        }
-        &:hover,
-        &.active {
-          color: #fff;
-          background-color: #000;
-        }
+      }
+    }
+    .right-field {
+      display: flex;
+      align-items: center;
+      height: 100%;
+      .login-btn {
+        color: #787878;
       }
     }
   }
