签到逻辑判断

--- a/src/components/category_list/index.scss
+++ b/src/components/category_list/index.scss
@@ -4,7 +4,7 @@
   left: 80px;
   transform: translateX(-132px);
   width: 720px;
-  // height: 430px;
+  min-height: 426px;
   background-color: #fff;
   border: 1px solid #d3d3d3;
   border-radius: 4px;
