歌词列表样式修改

--- a/src/components/music_player/index.scss
+++ b/src/components/music_player/index.scss
@@ -182,6 +182,9 @@
           left: 50%;
           transform: translateX(-50%);
           color: #fff;
+          width: 80%;
+          text-align: center;
+          @include ellipsis();
         }
         .close-btn {
           position: absolute;
@@ -323,11 +326,12 @@
         .lyric-list {
           .lyric-line {
             p {
-              font-size: 14px;
+              font-size: 12px;
               text-align: center;
               color: #989898;
               height: 32px;
               line-height: 32px;
+              @include ellipsis();
               &.active {
                 color: #fff;
               }
