我的音乐和我的关注未登录时页面完成

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -27,6 +27,10 @@ a {
   width: $mainContentWidth;
   margin: 0 auto;
 }
+.content-h {
+  height: 100%;
+  min-height: 700px;
+}
 
 .text-decoration {
   &:hover {
