--- a/src/page/artist_list/index.scss
+++ b/src/page/artist_list/index.scss
@@ -49,6 +49,7 @@
   .right-content-field {
     flex: 1;
     padding: 40px;
+    background-color: #fff;
     .artist-name-search-list {
       display: flex;
       justify-content: space-between;
