添加视频播放器

--- a/src/components/music_player/index.scss
+++ b/src/components/music_player/index.scss
@@ -492,7 +492,7 @@
       }
       .inner-btn {
         background-position: 0 0;
-        background-image: url("../../assets/images/playbar_inner");
+        background-image: url("../../assets/images/playbar_inner.png");
         background-repeat: no-repeat;
         &:hover {
           background-position: 0 -25px;
