--- a/src/page/mv_detail/index.scss
+++ b/src/page/mv_detail/index.scss
@@ -1,16 +1,51 @@
 .mv-detail-container {
-  display: flex;
-  flex-wrap: wrap;
-  border: 1px solid #d3d3d3;
-  border-width: 0 1px;
-  background: url("../../assets/images/wrap4.png") repeat-y center 0;
-  .left-field {
-    width: 708px;
-    padding: 47px 30px 40px 39px;
+  .mv-title {
+    display: flex;
+    align-items: center;
+    line-height: 32px;
+    margin-bottom: 8px;
+    .mv-icon {
+      width: 29px;
+      height: 18px;
+      background-image: url("../../assets/images/icon2.png");
+      background-repeat: no-repeat;
+      background-position: -230px -480px;
+    }
+    .title {
+      font-size: 24px;
+      margin: 0 5px;
+    }
+    .songers {
+      flex: 1;
+      color: $mainLinkColor;
+      line-height: 17px;
+      margin: 6px 0 0 0;
+      @include ellipsis();
+      span {
+        cursor: pointer;
+        a {
+          color: $mainLinkColor;
+        }
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      span + span {
+        &::before {
+          content: "  /  ";
+        }
+      }
+    }
   }
-  .right-field {
-    flex: 1;
-    padding: 20px 40px 40px 30px;
-    overflow: hidden;
+  .mv-desc {
+    .publish-time,
+    .playcount {
+      color: #999;
+      line-height: 18px;
+    }
+    .desc {
+      line-height: 18px;
+      margin-top: 10px;
+    }
   }
 }
