--- a/src/components/video_player/index.scss
+++ b/src/components/video_player/index.scss
@@ -7,6 +7,7 @@
     video {
       width: 100%;
       height: 100%;
+      object-fit: contain;
     }
     .big-play-btn {
       display: none;
@@ -124,11 +125,11 @@
         }
       }
       .current-time {
-        color: #a1a1a1;
+        color: rgba(255, 255, 255, 0.5);
         margin: 0 10px;
       }
       .total-time {
-        color: #797979;
+        color: rgba(255, 255, 255, 0.5);
         margin: 0 10px 0 10px;
       }
       .quality {
