--- a/src/page/artist_detail/index.scss
+++ b/src/page/artist_detail/index.scss
@@ -132,6 +132,8 @@
         .name {
           text-align: center;
           margin-top: 5px;
+          width: 50px;
+          @include ellipsis();
         }
       }
       .artist-item:nth-of-type(3n + 1) {
