增加认证的个人音乐页面

--- a/src/container/my_music_authed/index.scss
+++ b/src/container/my_music_authed/index.scss
@@ -1,19 +1,11 @@
-.toplist-container {
+.my-music-authed-container {
   display: flex;
-  border: 1px solid #d3d3d3;
   border-width: 0 1px;
   .left-side-field {
     width: 240px;
     padding: 40px 0 0 0;
     border-right: 1px solid #d3d3d3;
-    .title {
-      padding: 0 10px 12px 15px;
-      font-size: 14px;
-      color: #000;
-    }
-    .net-mmusic-toplist-container {
-      margin-bottom: 20px;
-    }
+    background-color: #f5f5f5;
   }
   .right-content-field {
     width: 740px;
